# 7574-TP3

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pylintrc  pyproject.toml  sample_settings.ini  settings.ini  watch.sh
docker/: Dockerfile  docker-compose.yaml
informe/: informe.bib  informe.tex
lazarus/: bully.py  cfg.py  constants.py  docker_utils.py  exceptions.py  sidecar.py  utils.py
lazarus/cli/: cli.py  dataset.py  download.py  filter.py  joiner.py  sink.py  transform.py
lazarus/client/: cli.py  client.py  file_provider.py
lazarus/common/: protocol.py
lazarus/dataset/: download.py
lazarus/mom/: exchange.py  message.py  queue.py  rabbit.py
lazarus/nodes/: node.py
lazarus/server/: collector.py  leader_election.py  server.py  storage.py
lazarus/storage/: base.py  local.py
lazarus/tasks/: base.py  collect.py  downloader.py  filters.py  joiner.py  transforms.py
rabbit/test_dex/: cons_dex.py  prod_dex.py
rabbit/test_workers/: cons_wrk.py  prod_wrk.py
scripts/: chaos-gorilla.sh  leader.py  node.py  test_consume.py
tests/: test_storage.py
tests/mom/: Dockerfile  Makefile  app.py  collector.py  common.py  docker-compose-test.yaml  producer.py  subscriber.py  worker.py
tests/protocol/: Dockerfile  Makefile  app.py  docker-compose-client.yaml  docker-compose-server.yaml
tests/resources/: comments.csv  posts.csv
